styles/style.css
* {
    outline: 1px dashed gray;
}

:root {
    --color-primary-red: hsl(1, 90%, 64%);
    --color-primary-blue: hsl(219, 85%, 26%);
    --color-body-background: hsl(210, 60%, 98%);
    --color-private-message-background: hsl(211, 68%, 94%);
    --color-desktop-background: hsl(205, 33%, 90%);
    --color-message-hover: hsl(219, 14%, 63%);
    --color-text-color: hsl(219, 12%, 42%);
    --color-dark-text-color: hsl(224, 21%, 14%);

    font-family: 'Plus Jakarta Sans', sans-serif;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 50px 200px;
    background-color: var(--color-body-background);
}

main {
    padding: 20px;
    background-color: white;
    min-width: 375px;
    max-width: 750px;
    border-radius: 20px;
}

.top-section {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 50px;
}

.notifications {
    display: flex;
    justify-content: start;
    align-items: center;
    gap: 10px;
}

h1 {
    color: var(--color-dark-text-color);
    font-size: 1.375rem;
}

.unread-count {
    background-color: var(--color-primary-blue);
    color: white;
    width: 35px;
    height: 30px;
    line-height: 29px;
    font-weight: 800;
    text-align: center;
    border-radius: 5px;
    font-size: 1.125rem;
}

.top-section button {
    border: none;
    padding: 0;
    text-decoration: none;
    background: none;
    cursor: pointer;
    color: var(--color-text-color);
}

.top-section button:hover,
.name:hover,
.post:hover,
.group:hover {
    color: var(--color-primary-blue);
}

.main-section {
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: stretch;
    gap: 20px;
    margin-top: 20px;
}

.card {
    display: flex;
    gap: 10px;
    border-radius: 10px;
    padding: 20px;
    font-size: 0.875rem;
}

.unread {
    background-color: var(--color-body-background);
}

.card img {
    width: 40px;
    height: 40px;
}

.right-section {
    flex: auto;
    display: flex;
    flex-direction: column;
    color: var(--color-text-color);
}

.name {
    cursor: pointer;
}

.description {
    display: flex;
    justify-content: space-between;
    gap: 10px;
}

.description img {
    width: 50px;
    height: 50px;
}

.name {
    color: var(--color-dark-text-color);
    font-weight: 800;
}

.post {
    font-weight: 800;
    cursor: pointer;
}

.unread-dot {
    font-size: 0.625rem;
    vertical-align: text-top;
    line-height: 2.15;
}

.private-message {
    border: solid 1px var(--color-private-message-background);
    border-radius: 5px;
    padding: 20px;
    margin-top: 10px;
    cursor: pointer;
}

.private-message:hover {
    background-color: var(--color-private-message-background);
}

.group {
    font-weight: 800;
     cursor: pointer;
}

.my-picture {
    cursor: pointer;
}

footer {
    margin-top: 50px;
}

.attribution {
    font-size: 11px;
    text-align: center;
}

.attribution a {
    color: hsl(228, 45%, 44%);
}

/* TODO Fix footer on mobile view */

